# project-templates

./: README.md
general/: AGENTS.md  README.md.template
rnaseq-dtu/: .gitignore  AGENTS.md  README.md.template  config.yaml  install_deps.R  pyproject.toml
rnaseq-dtu/.claude/skills/scaffold-rnaseq-dtu/: SKILL.md
rnaseq-dtu/R/: design.R  dte.R  dtu.R  helpers.R  plots.R
rnaseq-dtu/analysis/: 01_fetch.py  03_salmon_quant.sh  04_import_tx.R  05_dtu.R  06_figures.R
rnaseq-dtu/python/: __init__.py  config.py  fetch.py
rnaseq-dtu/reports/: report.qmd
rnaseq-primary/: AGENTS.md  README.md.template  config.yaml  install_deps.R  pyproject.toml
rnaseq-secondary/: .Rprofile  .gitignore  AGENTS.md  README.md.template  captions.tsv  config.yaml  fetch_data.sh  install_deps.R  pyproject.toml
rnaseq-secondary/.claude/skills/scaffold-rnaseq-secondary/: SKILL.md
rnaseq-secondary/R/: build_se.R  de_common.R  de_deseq2.R  de_edger.R  design.R  helpers.R  housekeeping.R  routing.R  scope.R  screening.R
rnaseq-secondary/analysis/: 01_build_se.R  02_de.R  03_figures.R
rnaseq-secondary/python/: fetch_counts.py
rnaseq-secondary/reports/: report.qmd
rnaseq-secondary/resources/housekeeping/: hk_human.txt  hk_mouse.txt
rnaseq-secondary/resources/master_regulators/: README.md
scrna/: .gitignore  00_config.R  01_load_qc.R  02_integrate.R  03_markers.R  AGENTS.md  README.md.template  config.yaml  fetch_data.sh  install_deps.R  pyproject.toml
scrna/.claude/skills/scaffold-config/: SKILL.md
scrna/R/: annotate.R  helpers.R  load_data.R
scrna/analysis/: 00_config.R  01_load_qc.R  02_integrate.R  03_markers.R  04_annotate.R
scrna/python/: fetch_data.py
scrna/reports/: report.qmd
(+14 files in other folders)
