# Python 版ピン（① 版ピン 3 系統の Python 系統）。uv で管理する（AGENTS-base: pip 禁止・uv 使用）。
# scRNA テンプレの Python は取得・変換（python/）が主で、既定は標準ライブラリのみ（依存ゼロ）。
# Scanpy 等を使う場合は下に追記し `uv lock` で uv.lock を生成・追跡する。
[project]
name = "scrna-analysis"
version = "0.1.0"
description = "scRNA-seq 解析テンプレートの取得・変換モジュール（python/）"
requires-python = ">=3.11.4"  # tarfile extractall(filter=) バックポート版以降（PEP 706）
dependencies = []

# 例) Scanpy を使う場合はコメントを外す（その後 `uv lock` で uv.lock を作り git 追跡する）:
# dependencies = ["scanpy>=1.10", "anndata>=0.10"]

[tool.uv]
package = false
